crates/ink/tests/ui/storage_item/fail/collections_only_packed_1.stderr
error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `ink_storage::ink_storage_traits::StorableHint::Type`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   |     type Type: Storable;
   |     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `StorableHint::Type`

error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`

error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
   |
9  | #[ink::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:5
   |
11 |     a: Vec<NonPacked>,
   |     ^^^^^^^^^^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: expected `Vec<NonPacked>` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:5
   |
9  | #[ink::storage_item]
   | -------------------- in this procedural macro expansion
10 | struct Contract {
11 |     a: Vec<NonPacked>,
   |     ^^^^^^^^^^^^^^^^^ `Vec<NonPacked>` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `Vec<NonPacked>`
   = note: consider adding `#[ink::storage_item(packed)]` to `Vec<NonPacked>`
   = note: if `Vec<NonPacked>` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` which comes from the expansion of the attribute macro `ink::storage_item` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected `NonPacked` to use a "packed" layout
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ `NonPacked` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `NonPacked`
   = note: consider adding `#[ink::storage_item(packed)]` to `NonPacked`
   = note: if `NonPacked` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
   = help: the trait `StorageLayout` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `StorageLayout`
